@@ -15,6 +15,11 @@ version 1.5.1, in progress
 - Enforce use of '.' as decimal separator in genr formulae
 - Fix filename encoding issue with opening of CSV files
 - Eliminate deprecated command "sim"
+- Extend maximum length of variable names to 15 characters
+- Disable "shell" command by default (it can be enabled under
+  /File/Preferences)
+- Change the names of the internal variables coeff, stderr and
+  rho to $coeff, $stderr and $rho
 
 12/15/2005 version 1.5.0
 - Add VECM (Vector Error Correction Models) for time-series
